# TransCrab

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  flake.nix
src/: context_menu.rs  main.rs  stt.rs
