[package]
name = "rust-shit"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
hound = "3.5.1"
poise = "0.6.1"
reqwest = "0.12.5"
tempfile = "3.10.1"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
vosk = "0.2.0"

[[bin]]
name = "rust-shit"
path = "src/main.rs"
