[package]
name = "trans_crab"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
hound = "3.5.1"
poise = "0.6.1"
reqwest = "0.12.5"
tempfile = "3.10.1"
tokio = { version = "1.39.1", features = [
    "macros",
    "rt-multi-thread",
] }
whisper-rs = "0.11.1"

[[bin]]
name = "trans_crab"
path = "src/main.rs"
